--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/App.ts",
+      "src": "api/index.ts",
       "use": "@vercel/node",
       "config": { "distDir": "dist" }
     }
