--- a/package.json
+++ b/package.json
@@ -17,13 +17,21 @@
     "express": "^4.21.0",
     "mongoose": "^8.6.3",
     "nodemon": "^3.1.5",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "class-transformer": "^0.5.1",
+    "colorette": "^2.0.20",
+    "express-oauth2-jwt-bearer": "^1.6.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.96",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.5.5",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.2"
   }
